--- a/web/index.html
+++ b/web/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8"></meta>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css"/>
         <title>amongus? amongus!</title>
+
     </head>
 <body>
-    sussy baka
-    <h6>gay</h6>
-    <p>amongus</p>
-    <br/>
-    <h5>gay</h5>
-    <i><p>amongus</p></i>
-    <hr/>
-    <h4>gay</h4>
-    <h3>gay</h3>
-    <h2>gay</h2>
-    <h1>gay</h1>
-   
+    <section class="showcase">
+        <header>
+        </header>
+        <video src="bgm.mp4" muted loop autoplay></video>
+        <div class="overlay"></div>
+        <div class="text">
+            <h2>Among Us</h2>
+            <h3>amogus amogus</h3>
+            <p>sus sussy sus sus sussy baka sussy imposter sus baka amongus bruh omg sussy impostor amongus !</p>
+            <a href="#">click here</a>
+        </div>
 
-
-
-
+    </section>
 </body>
-<iframe width="900" height="506" src="https://www.youtube.com/embed/grd-K33tOSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
