--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,14 @@
             <h2>Among Us</h2>
             <h3>amogus amogus</h3>
             <p>sus sussy sus sus sussy baka sussy imposter sus baka amongus bruh omg sussy impostor amongus !</p>
-            <a href="#">click here</a>
+            <button id="btn" onclick="audio.play()">click here</button>
+            
         </div>
 
     </section>
+    <script type="text/javascript">
+        const audio =new Audio();
+        audio.src="bgm.mp3";
+
+    </script>
 </body>
